# rules_proto_grpc

./: .gitignore  repositories.bzl
docs/lang/: js.rst
github.com/grpc/grpc-web/: BUILD.bazel
js/: BUILD.bazel  repositories.bzl
js/requirements/: package.json
