load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "closure_plugin",
    options = [
        "import_style=closure",
        "mode=grpcwebtext",
    ],
    outputs = [
        "{protopath}_grpc_web_pb.js",
    ],
    tool = "@com_github_grpc_grpc_web//javascript/net/grpc/web:protoc-gen-grpc-web",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "commonjs_plugin",
    options = [
        "import_style=commonjs",
        "mode=grpcwebtext",
    ],
    outputs = [
        "{protopath}_grpc_web_pb.js",
    ],
    tool = "@com_github_grpc_grpc_web//javascript/net/grpc/web:protoc-gen-grpc-web",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "commonjs_dts_plugin",
    options = [
        "import_style=commonjs+dts",
        "mode=grpcwebtext",
    ],
    output_directory = True, # Plugin outputs cannot be predicted as they depend on service/package name
    tool = "@com_github_grpc_grpc_web//javascript/net/grpc/web:protoc-gen-grpc-web",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "ts_plugin",
    options = [
        "import_style=typescript",
        "mode=grpcwebtext",
    ],
    output_directory = True, # Plugin outputs cannot be predicted as they depend on service/package name
    tool = "@com_github_grpc_grpc_web//javascript/net/grpc/web:protoc-gen-grpc-web",
    visibility = ["//visibility:public"],
)
